front-end remains

--- a/Weather Site/public/index.html
+++ b/Weather Site/public/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h1>Weather App</h1>
-    <div class="card">
-        <input class="input" type="text"><br>
-        <div id="weather-info"></div>
+    <div class="container">
+        <h1>Weather App</h1>
+        <div class="search-bar">
+            <input class="input" type="text" placeholder="Enter Location"><br>
+        </div>
+        <div class="card">
+            <div class="bg"><div id="weather-info"></div></div>
+            <div class="blob"></div>
+        </div>
     </div>
+      
 
     <script src="main.js"></script>
 </body>
