--- a/Weather Site/public/index.html
+++ b/Weather Site/public/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/bddced03fd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <h1>Weather App</h1>
         <div class="search-bar">
             <input class="input" type="text" placeholder="Enter Location"><br>
+            <i class="fa-solid fa-magnifying-glass fa-2xl icon" style="cursor: pointer; color: #ffffff; margin-top: 36px; margin-left: 15px;"></i>
         </div>
         <div class="card">
             <div class="bg"><div id="weather-info"></div></div>
